# Restaurant_Recomendator

./: .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  main.py
agent/chains/: __init__.py  answer_agent.py  bandit.py  cf_model.py  cf_online.py  input_parser.py  orchestrator.py  reranker.py  retrieval_agent.py
agent/nodes/: __init__.py  answer_agent.py  input_parser.py  orchestrator.py  reranker.py  retrieval_agent.py
agent/test/: input_parser.py  retrieval.py
agent/test/testcase/: testcases.py
agent/test/testcase/tested/: tc01_fried_chicken.txt  tc02_korean_bbq.txt  tc03_japanese_near_beach.txt  tc04_italian_pizza_pasta.txt  tc05_steak_western.txt  tc06_central_specialties.txt  tc07_vietnamese_thanh_khe.txt  tc08_buffet_korean_japanese.txt  tc09_fastfood_chicken_burger.txt  tc10_asian_mix_vincom.txt
data/: cf_model.pkl  cf_model_meta.json  debug_detail.html  foody_page1.csv  foody_page1.html  interactions_log.csv  interactions_mock.csv  users.csv
utils/: chroma_ingest.py  db.py  debug_fetch_detail.py  foody_csv.py  foody_detail.py  foody_list.py  foody_menu_crawl.py  logger.py  seed_dummy_data.py  train_cf.py  visualize.py
web/: app.py
web/static/css/: style.css
web/templates/: chat.html  home.html  login.html  register.html
